--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/tr.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/tr.json
@@ -245,10 +245,10 @@
   "Common": {
     "Buttons": {
       "Submit": {
-        "Title": "tr_Submit"
+        "Title": "Gönder"
       },
       "Expand": {
-        "Title": "tr_Expand"
+        "Title": "Genişlet"
       }
     },
     "Navigation": {
@@ -261,135 +261,13 @@
       "LearnMore": "Daha Fazla Bilgi",
       "MedicalHistoryQuestionnaire": "Tıbbi Öykü",
       "MyAccount": "Hesabım",
-      "MyDashboard": "tr_My Dashboard",
+      "MyDashboard": "Panom",
       "Next": "Sonraki",
       "Previous": "Önceki",
       "SignIn": "Oturum Aç",
-      "Statistics": "tr_Platform Statistics",
-      "Submit": "tr_Submit",
+      "Statistics": "Platform İstatistikleri",
+      "Submit": "Gönder",
       "YourParticipants": "Katılımcılarınız"
-    }
-  },
-  "DataAccess": {
-    "Assurances": {
-      "AssuranceList": [
-        "tr_Data will only be used for approved research.",
-        "tr_Data confidentiality will be protected and the investigator will never make any attempt at \"re-identification.\"",
-        "tr_There will be no transfer of any part of the dataset to any other investigators or institutions (except between collaborating investigators or any project assistants who answer directly to the Principal Investigator).",
-        "tr_All applicable laws and local institutional policies will be followed.",
-        "tr_Data will not be sold or shared with third parties.",
-        "tr_Accidental transfer of any part of the dataset will be prevented. Adequate security controls are in place, such as secure laptops and storage devices; no downloading is allowed to unsecured network drives or servers.",
-        "tr_Report on the uses of the data, e.g. publications, will be provided to the DAC annually.",
-        "tr_The Global A-T Family Data Platform Dataset will be acknowledged in any publication or presentation resulting from the use of the Dataset.",
-        "tr_Collaborating investigators from the researcher’s institution, as listed in the DAR form, agree to these Assurances.",
-        "tr_These assurances will be agreed to annually."
-      ],
-      "Controls": {
-        "ApplyingSignature": {
-          "Label": "tr_Signature of Applying Researcher"
-        },
-        "Date": {
-          "Label": "tr_Date"
-        }
-      },
-      "Paragraph1": "tr_I agree to the following assurances:",
-      "Title": "tr_Assurances Statement"
-    },
-    "Dataset": {
-      "Controls": {
-        "Genomic": {
-          "Label": "tr_Genomic Data"
-        },
-        "Survey": {
-          "Label": "tr_Clinical Survey Data"
-        }
-      },
-      "Messages": {
-        "FileSizeExceedsTheLimit": "tr_File size exceeds the limit",
-        "ResearcherBiosketch": "tr_Researcher biosketch cannot be empty.",
-        "ResearcherEmail": "tr_Researcher email cannot be empty.",
-        "ResearcherName": "tr_Researcher name cannot be empty.",
-        "ResearcherOrgAddress": "tr_Org address 1 cannot be empty.",
-        "ResearcherOrgCity": "tr_Org city cannot be empty.",
-        "ResearcherOrgCountry": "tr_Org country cannot be empty.",
-        "ResearcherOrgName": "tr_Org name cannot be empty.",
-        "ResearcherOrgZip": "tr_Org zip cannot be empty.",
-        "ResearcherPhone": "tr_Researcher phone cannot include letters.",
-        "ResearcherProjectDescription": "tr_Project description cannot be empty.",
-        "ResearcherSign": "tr_Researcher signature cannot be empty.",
-        "ResearcherUse": "tr_Research use cannot be empty."
-      },
-      "SubTitle1": "tr_Select all applicable options.",
-      "SubTitle2": "tr_Specific Requests",
-      "Text1": "tr_Please state the disease area(s), if any, that this study focuses on.",
-      "Title": "tr_Dataset(s) requested"
-    },
-    "Header": {
-      "Paragraph1": "Global A-T Aile Veri Platformu, dünya çapında A-T aileleri ve uzmanlarının gözetimi altında ve A-T hastalarının sağlık bilgileri ile genetik ve olası diğer tipteki verilerinin araştırmacılarla paylaşılabileceği, hasta odaklı bir girişimdir. Bu platform, araştırmacıların dünya çapında önemli hasta verilerine hızlı, güvenli ve etkin bir şekilde erişmelerini sağlayacak ve umarız ki yeni keşiflerin yapılmasını mümkün kılacaktır.",
-      "Paragraph2": "tr_Researchers should request access to the data using this Data Access Request (DAR) form which includes assurances associated with the use of these data sets.",
-      "Paragraph3": "tr_Our Data Access Committee (DAC) will review the DAR form submitted by the researchers and will either approve or disapprove data access.",
-      "Paragraph4": "tr_Researchers will certify that they will abide by the assurances given in this form, including agreeing not to distribute controlled-access data in any form to any third parties other than their own research staff who have agreed to these assurances. For projects that include collaborators at other institutions, collaborating investigators are required to submit separate DAR forms.",
-      "Paragraph5": "tr_Upon receiving access approval, researchers will be provided with specific credentials to authenticate their identity and gain access to the controlled-access datasets. The DAC requests annual reports from researchers about what has been accomplished using the data and any violations of the assurances that may have occurred.",
-      "Title": "tr_Data Access Request"
-    },
-    "OrganizationForm": {
-      "Address1": "tr_Address 1",
-      "Address2": "tr_Address 2",
-      "City": "tr_City/Town",
-      "Country": "Ülke",
-      "Department": "tr_Department",
-      "Name": "tr_Organization Name",
-      "State": "İl",
-      "Title": "tr_Organization Information",
-      "Zip": "tr_Zip/Postal Code"
-    },
-    "ResearcherForm": {
-      "Attachment": "tr_Please attach a CV and/or biographical sketch (PDF files only, 2MB max)",
-      "Email": "tr_Email",
-      "Name": "tr_Name",
-      "Phone": "tr_Phone",
-      "Title": "tr_Researcher Information"
-    },
-    "ResearchProject": {
-      "Article1": {
-        "Paragraph": "tr_Please note that coordinated requests made by researchers who are collaborating on the same project should use the same title.",
-        "Title": "tr_Descriptive Title of Project"
-      },
-      "Article2": {
-        "Paragraph": "tr_Collaborators at different institutions from the PI must complete a separate DAR form.",
-        "Title": "tr_Names and Institutions of Collaborators"
-      },
-      "Article3": {
-        "Paragraph": "tr_Please provide a brief description of the proposed use of the dataset(s) to be reviewed by the Data Access Committee. This statement should be one or two paragraphs in length and include research objectives, the study design and an analysis plan. If you are requesting multiple datasets, please describe how you will use them.",
-        "Title": "tr_Research Use Statement"
-      },
-      "Title": "tr_Research Project Overview"
-    },
-    "TypeResearch": {
-      "Controls": {
-        "Label": "tr_Controls",
-        "Paragraph": "tr_The reason for this request is to increase the number of controls available for a comparison group (e.g., a case-control study)."
-      },
-      "Describe": {
-        "Label": "tr_Please describe"
-      },
-      "DisableStudy": {
-        "Label": "tr_Disease study",
-        "Paragraph": "tr_The primary purpose of the research is to learn more about a particular disease or disorder (e.g., type 2 diabetes), a trait (e.g., blood pressure), or a set of related conditions (e.g., autoimmune diseases, psychiatric disorders)."
-      },
-      "MethodDevelopment": {
-        "Label": "tr_Methods development and validation studies",
-        "Paragraph": "tr_The primary purpose of the research is to develop and/or validate new methods for analyzing or interpreting data (e.g., developing more powerful methods to detect epistatic, gene-environment, or other types of complex interactions in genome-wide association studies). Data will be used for developing and/or validating new methods."
-      },
-      "Other": {
-        "Label": "tr_Other"
-      },
-      "Population": {
-        "Label": "tr_Population structure or normal variation studies",
-        "Paragraph": "tr_The primary purpose of the research is to understand variation in the general population (e.g., genetic substructure of a population)."
-      },
-      "SubTitle": "tr_Select all applicable options.",
-      "Title": "tr_Type of Research"
     }
   },
   "Footer": {
@@ -452,32 +330,32 @@
   "SDK": {
     "DownloadButton": "Gözden Geçirmeyi İndir",
     "CancelButton": "İptal",
-    "CloseButton": "tr_Close",
-    "CommunicationError": "tr_There was a problem saving your data. Please check the form and your answers before submitting",
+    "CloseButton": "Kapat",
+    "CommunicationError": "Verileriniz kaydedilirken bir hata meydana geldi. Lütfen göndermeden önce formu ve cevaplarınızı kontrol edin",
     "Dashboard": {
       "Text": "",
       "Title": "Konsolum"
     },
     "DatePicker": {
-      "April": "tr_April",
-      "August": "tr_August",
-      "Day": "tr_Choose day...",
-      "December": "tr_December",
-      "February": "tr_February",
-      "January": "tr_January",
-      "July": "tr_July",
-      "June": "tr_June",
-      "March": "tr_March",
-      "May": "tr_May",
-      "Month": "tr_Choose month...",
-      "November": "tr_November",
-      "October": "tr_October",
-      "September": "tr_September",
-      "Year": "tr_Choose year..."
+      "April": "Nisan",
+      "August": "Ağustos",
+      "Day": "Gün seçin...",
+      "December": "Aralık",
+      "February": "Şubat",
+      "January": "Ocak",
+      "July": "Temmuz",
+      "June": "Haziran",
+      "March": "Mart",
+      "May": "Mayıs",
+      "Month": "Ay seçin...",
+      "November": "Kasım",
+      "October": "Ekim",
+      "September": "Eylül",
+      "Year": "Yıl seçin..."
     },
     "DetailsPlaceholder": {
-      "PluralForm": "tr_characters remaining",
-      "SingularForm": "tr_character remaining"
+      "PluralForm": "karakter kaldı",
+      "SingularForm": "karakter kaldı"
     },
     "DoNotAssent": "Olur Vermiyorum",
     "DoNotConsent": "Olur Vermiyorum",
@@ -500,73 +378,73 @@
     "RegisterButton": "Kaydol",
     "SaveAndSubmit": "Kaydet ve Gönder",
     "SaveAndSubmitEnrollment": "Kaydet ve Çalışmaya Kaydı Gönder",
-    "SavingButton": "tr_Saving",
+    "SavingButton": "Kaydediliyor",
     "SignAndAssent": "İmza ve Olur",
     "SignAndConsent": "İmza ve Olur",
     "StartOrResume": "Başla/Devam Et",
-    "SubmitButton": "tr_Submit",
+    "SubmitButton": "Gönder",
     "SignInOut": {
       "SignOut": "Oturumu Kapat"
     },
     "Title": {
-      "Alert": "tr_Your session will time-out soon",
-      "Default": "tr_The Global A-T Family Data Platform"
+      "Alert": "Oturumunuz yakında zaman aşımına uğrayacak",
+      "Default": "Global A-T Aile Veri Platformu"
     },
     "TooltipAlt": "Kimin adını girmeliyim?",
     "UserActivities": {
       "ActivityActions": "Eylemler",
-      "ActivityDate": "tr_Created",
-      "ActivityName": "tr_Form",
+      "ActivityDate": "Oluşturulma",
+      "ActivityName": "Form",
       "ActivityStatus": "Durum",
       "ActivityStatuses": {
         "COMPLETE": "Tamamlandı",
         "CREATED": "Henüz Başlanmadı",
         "IN_PROGRESS": "İşlemde"
       },
-      "QuestionCount": "tr_{{ answered }} / {{ total }} Answered",
-      "Summary": "tr_Summary",
+      "QuestionCount": "{{ answered }} / {{ total }} Yanıtlandı",
+      "Summary": "Özet",
       "SurveysToComplete": {
-        "Plural": "tr_{{ count }} surveys to complete",
-        "Singular": "tr_{{ count }} survey to complete"
+        "Plural": "Tamamlanacak {{ count }} anket",
+        "Singular": "Tamamlanacak {{ count }} anket"
       }
     },
     "UserMenu": {
       "SignOutButton": "Oturumu Kapat"
     },
     "UserPreferences": {
-      "UserPreferencesGender": "tr_Sex",
-      "UserPreferencesLocale": "tr_Preferred language",
-      "UserPreferencesTitle": "tr_User preferences"
+      "UserPreferencesGender": "Cinsiyet",
+      "UserPreferencesLocale": "Tercih edilen dil",
+      "UserPreferencesTitle": "Kullanıcı tercihleri"
     },
-    "ValidateError": "tr_Submission cannot proceed. Please review messages in form for details.",
+    "ValidateError": "Gönderme işlemine devam edilemiyor. Ayrıntılar için lütfen formdaki mesajları gözden geçirin.",
     "Validators": {
-      "DateNavyValidationRule": "[TR] Entered date is invalid"
+      "DateNavyValidationRule": "Girilen tarih geçersiz"
     }
   },
   "Statistics": {
-    "Title": "tr_The A-T Family Data Platform by the Numbers",
+    "Title": "Sayılarla A-T Aile Veri Platformu",
     "CountList": {
-      "totalParticipantsCount": "tr_Total number of participants",
-      "countriesCount": "tr_Countries represented",
-      "genomeStudyParticipantsCount": "tr_People consenting to participate in genome sequencing",
-      "governedParticipantsCount": "tr_Children enrolled by their parents",
-      "selfEnrolledParticipantsCount": "tr_Self-enrolled participants"
+      "totalParticipantsCount": "Toplam katılımcı sayısı",
+      "countriesCount": "Temsil edilen ülkeler",
+      "genomeStudyParticipantsCount": "Genom dizilemesine katılmayı kabul eden kişiler",
+      "governedParticipantsCount": "Ebeveynleri tarafından kaydettirilen çocuklar",
+      "selfEnrolledParticipantsCount": "Kendi kendine kaydolan katılımcılar"
     },
-    "Subtitle": "tr_Countries represented"
+    "Subtitle": "Temsil edilen ülkeler"
   },
   "Survey": {
     "Self": "{{ firstName }} Kayıt Süreci",
-    "NewParticipant": "New Participant Kayıt Süreci",
+    "NewParticipant": "Yeni Katılımcı Kayıt İşlemi",
     "ThankYouPopup": {
-      "Text": "tr_Thank you for submitting the survey"
+      "Text": "Anketi gönderdiğiniz için teşekkürler"
     }
   },
   "Toolkit": {
     "ActivityActions": {
-      "Continue": "tr_Continue",
-      "Start": "tr_Start",
-      "View": "tr_View",
-      "Edit": "tr_Edit"
+      "Continue": "Devam",
+      "Start": "Başla",
+      "View": "Görüntüle",
+      "Edit": "Düzenle"
     },
     "Dashboard": {
       "Actions": "Eylemler",
@@ -583,24 +461,24 @@
         "CancelButton": "İptal",
         "Fields": {
           "ConfirmEmail": {
-            "Error": "tr_Please enter a valid email address",
-            "Placeholder": "tr_Email confirmation *"
+            "Error": "Lütfen geçerli bir e-posta adresi girin",
+            "Placeholder": "E-posta doğrulaması *"
           },
           "Email": {
-            "Error": "tr_Please enter a valid email address",
+            "Error": "Lütfen geçerli bir e-posta adresi girin",
             "Placeholder": "E-posta adresi"
           },
           "FirstName": {
-            "Error": "tr_First Name is required",
+            "Error": "Ad gerekli",
             "Placeholder": "Adı"
           },
           "LastName": {
-            "Error": "tr_Last Name is required",
+            "Error": "Soyadı gerekli",
             "Placeholder": "Soyadı"
           }
         },
-        "LoadingError": "tr_We're sorry, but an error has occurred.",
-        "MatchEmailsError": "tr_Please ensure that both email fields are filled in and that the addresses match.",
+        "LoadingError": "Üzgünüz ama bir hata oluştu.",
+        "MatchEmailsError": "Lütfen her iki e-posta alanının da doldurulduğundan ve adreslerin uyuştuğundan emin olun.",
         "Required": "",
         "SubmitButton": "E-posta Listesine Katıl",
         "Text": "Bize bir e-posta adresi sağlarsanız Global A-T Aile Veri Platformunun ilerlemesi hakkında size düzenli bilgi veririz.",
@@ -609,12 +487,12 @@
       "SessionWillExpire": {
         "Continue": "Devam",
         "SignOut": "Oturumu Kapat",
-        "Text": "tr_To protect your privacy, the system is going to log you out because you have been away for a while. Click “Continue” to stay logged in. Click “Sign Out” if you are done for now.",
-        "Title": "tr_Your session will time-out soon"
+        "Text": "Bir süredir uzakta olmanız nedeniyle, gizliliğinizi korumak için sistem oturumunuzu kapatacaktır. Oturumunuzun açık kalması için “Devam” düğmesine tıklayın. Şimdilik işiniz bittiyse “Oturumu Kapat” düğmesine tıklayın.",
+        "Title": "Oturumunuz yakında zaman aşımına uğrayacak"
       }
     },
     "ErrorCodes": {
-      "PASSWORD_RESET_LINK_EXPIRED": "tr_Your password reset link has expired."
+      "PASSWORD_RESET_LINK_EXPIRED": "Şifre sıfırlama bağlantınızın süresi doldu."
     },
     "ErrorPage": {
       "DefaultText": {
@@ -625,18 +503,18 @@
       "Title": "Üzgünüz ama bir hata oluştu. Lütfen daha sonra tekrar deneyin."
     },
     "Password": {
-      "InputPlaceholder": "tr_Password",
-      "PasswordRequiredError": "tr_Password is required",
-      "PasswordWrongError": "tr_Incorrect password. Please try again.",
-      "Text": "tr_Please enter your password *",
-      "Title": "tr_Please enter the password"
+      "InputPlaceholder": "Şifre",
+      "PasswordRequiredError": "Şifre gerekli",
+      "PasswordWrongError": "Yanlış şifre Lütfen tekrar deneyin.",
+      "Text": "Lütfen şifrenizi girin *",
+      "Title": "Lütfen şifreyi girin"
     },
     "SessionExpired": {
-      "Text": "tr_You were away for a while, so we logged you out as a security precaution. Please log in again to return to the last page you were on."
+      "Text": "Bir süredir uzaktaydınız, bu yüzden güvenlik önlemi olarak oturumunuz kapatıldı. Bulunduğunuz son sayfaya dönmek için lütfen tekrar giriş yapın."
     },
     "StayInformed": {
       "Text": "Global A-T Aile Veri Platformu e-posta listesine katıldığınız için teşekkür ederiz. Sizi verdiğiniz e-posta adresini kullanarak bu girişim konusunda haberdar edeceğiz.",
-      "Title": "tr_Stay informed"
+      "Title": "Güncel bilgilerden haberdar olun"
     }
   },
   "WorkflowProgress": {
