at | fix progress bar title translation for feeding survey

--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/de.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/de.json
@@ -260,6 +260,7 @@
       "Language": "Sprache",
       "LearnMore": "Mehr erfahren",
       "MedicalHistoryQuestionnaire": "Krankengeschichte",
+      "FeedingSurvey": "Ernährungsumfrage",
       "MyAccount": "Mein Konto",
       "MyDashboard": "Mein Dashboard",
       "Next": "Weiter",
