--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/es.json
@@ -260,6 +260,7 @@
       "Language": "Idioma",
       "LearnMore": "Más información",
       "MedicalHistoryQuestionnaire": "Historia clínica",
+      "FeedingSurvey": "Encuesta sobre alimentación",
       "MyAccount": "Mi Cuenta",
       "MyDashboard": "Mi panel de control",
       "Next": "Siguiente",
