--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/fr.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/fr.json
@@ -260,6 +260,7 @@
       "Language": "Langue",
       "LearnMore": "En savoir plus",
       "MedicalHistoryQuestionnaire": "Antécédents médicaux",
+      "FeedingSurvey": "Enquête sur l'alimentation",
       "MyAccount": "Mon Compte",
       "MyDashboard": "Mon tableau de bord",
       "Next": "Suivant",
