--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/hi.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/hi.json
@@ -270,6 +270,7 @@
       "Language": "भाषा",
       "LearnMore": "और जानें",
       "MedicalHistoryQuestionnaire": "चिकित्सीय इतिहास",
+      "FeedingSurvey": "भोजन-सेवन सर्वेक्षण",
       "MyAccount": "मेरा खाता",
       "MyDashboard": "मेरा डैशबोर्ड",
       "Next": "अगला",
