--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/it.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/it.json
@@ -260,6 +260,7 @@
       "Language": "Lingua",
       "LearnMore": "Per saperne di più",
       "MedicalHistoryQuestionnaire": "Storia clinica",
+      "FeedingSurvey": "Sondaggio sull'alimentazione",
       "MyAccount": "Il Mio Account",
       "MyDashboard": "Il mio dashboard",
       "Next": "Avanti",
