--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ja.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ja.json
@@ -260,6 +260,7 @@
       "Language": "言語",
       "LearnMore": "さらに詳しく",
       "MedicalHistoryQuestionnaire": "病歴",
+      "FeedingSurvey": "食事介助アンケート",
       "MyAccount": "マイアカウント",
       "MyDashboard": "マイダッシュボード",
       "Next": "次へ",
