--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pl.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pl.json
@@ -260,6 +260,7 @@
       "Language": "Język",
       "LearnMore": "Dowiedz się więcej",
       "MedicalHistoryQuestionnaire": "Dokumentacja medyczna",
+      "FeedingSurvey": "Ankieta dotycząca karmienia",
       "MyAccount": "Moje konto",
       "MyDashboard": "Mój pulpit",
       "Next": "Dalej",
