--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pt.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pt.json
@@ -260,6 +260,7 @@
       "Language": "Idioma",
       "LearnMore": "Descubra mais",
       "MedicalHistoryQuestionnaire": "Histórico médico",
+      "FeedingSurvey": "Pesquisa sobre alimentação",
       "MyAccount": "Minha conta",
       "MyDashboard": "Meu painel",
       "Next": "Avançar",
