--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
@@ -260,6 +260,7 @@
       "Language": "Язык",
       "LearnMore": "Узнать больше",
       "MedicalHistoryQuestionnaire": "Медицинские данные",
+      "FeedingSurvey": "Опрос по питанию",
       "MyAccount": "Моя учетная запись",
       "MyDashboard": "Моя информационная панель",
       "Next": "Следующий",
