--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/tr.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/tr.json
@@ -260,6 +260,7 @@
       "Language": "Dil",
       "LearnMore": "Daha Fazla Bilgi",
       "MedicalHistoryQuestionnaire": "Tıbbi Öykü",
+      "FeedingSurvey": "Beslenme Anketi",
       "MyAccount": "Hesabım",
       "MyDashboard": "Panom",
       "Next": "Sonraki",
