--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/zh.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/zh.json
@@ -265,6 +265,7 @@
       "Language": "语言",
       "LearnMore": "了解更多",
       "MedicalHistoryQuestionnaire": "病史",
+      "FeedingSurvey": "进食调查",
       "MyAccount": "我的帐户",
       "MyDashboard": "我的仪表板",
       "Next": "下一个",
