--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/auth-ja.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/auth-ja.json
@@ -3,7 +3,8 @@
     "activateAccount": "をチェックしてください。このアドレスに、アカウントを有効化するためのガイドラインを記載したEメールを送信しました。",
     "checkEmail": "もうすぐ完了です! あなたのEメール: ",
     "stillWaiting": "まだEメールが届きませんか?",
-    "title": "アカウントのアクチベーション"
+    "title": "アカウントのアクチベーション",
+    "stillWaitingTooltip": "もう少しお待ちください。私たちが制御できないプロセスにより、時々Eメールの送信が遅れることがあります。Eメールアカウントの迷惑メールフォルダもチェックしてみてください。時々Eメールがそこに入っていることがあります。"
   },
   "common": {
     "alreadyRegistered": "すでに登録済ですか? ここからサインインしてください",
