--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/auth-ru.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/auth-ru.json
@@ -3,7 +3,8 @@
     "activateAccount": "Мы отправили вам письмо с инструкциями по активации вашей учетной записи.",
     "checkEmail": "Вы почти закончили! Проверьте свою электронную почту: ",
     "stillWaiting": "Еще не получили письмо?",
-    "title": "Активация учетной записи"
+    "title": "Активация учетной записи",
+    "stillWaitingTooltip": "Подождите еще немного. Иногда доставка письма может задержаться из-за не зависящих от нас процессов. Вы также можете поискать его в своей почте в папке «Спам». Иногда письмо может попасть туда."
   },
   "common": {
     "alreadyRegistered": "Уже зарегистрированы? Войти здесь",
