--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/it.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/it.json
@@ -64,7 +64,7 @@
     },
     "Doctors": [
       {
-        "Hospital": "Professore emerito di Genetica medica –“ Università di Cambridge, Cambridge, Regno Unito e Docente onorario, Wellcome Trust Sanger Institute, Hinxton, Regno Unito",
+        "Hospital": "Professore emerito di Genetica medica – Università di Cambridge, Cambridge, Regno Unito e Docente onorario, Wellcome Trust Sanger Institute, Hinxton, Regno Unito",
         "Name": "Martin Bobrow",
         "Rank": "MD"
       },
