--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/auth-de.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/auth-de.json
@@ -3,7 +3,8 @@
     "activateAccount": "mit Hinweisen zur Aktivierung Ihres Kontos wurde an Ihre E-Mail-Adresse gesendet.",
     "checkEmail": "Fast geschafft! Eine E-Mail ",
     "stillWaiting": "Sie haben noch keine E-Mail erhalten?",
-    "title": "Kontoaktivierung"
+    "title": "Kontoaktivierung",
+    "stillWaitingTooltip": "Manchmal dauert die Zustellung einer E-Mail etwas länger. Dies ist außerhalb unserer Kontrolle. Prüfen Sie auch den Spam-Ordner  Ihres E-Mail-Kontos."
   },
   "common": {
     "alreadyRegistered": "Bereits registriert? Hier anmelden",
