--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/auth-hi.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/auth-hi.json
@@ -3,7 +3,8 @@
     "activateAccount": "वहां आपके खाते को सक्रिय करने से संबंधित दिशानिर्देशों से युक्त एक ईमेल भेजा गया है।",
     "checkEmail": "आपका काम लगभग पूर्ण हो चुका है! कृपया अपनी ईमेल की जांच करें: ",
     "stillWaiting": "अभी भी अपने ईमेल की प्रतीक्षा कर रहे हैं?",
-    "title": "खाता सक्रियण"
+    "title": "खाता सक्रियण",
+    "stillWaitingTooltip": "थोड़ी देर और प्रतीक्षा करें। कभी-कभी ईमेल पहुँचने में कुछ ऐसी प्रक्रियाओं की वजह से देरी हो सकती है जो हमारे नियंत्रण से बाहर हैं। आप अपने ईमेल खाते के जंक फ़ोल्डर को भी देख सकते हैं। ईमेल कभी-कभी वहां पहुँच जाती है।"
   },
   "common": {
     "alreadyRegistered": "पहले से पंजीकृत हैं?  यहां साइन इन करें",
