--- a/ddp-workspace/projects/ddp-rgp/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-rgp/src/assets/i18n/es.json
@@ -661,42 +661,42 @@
             {
                 "title": "[es]Get to know our project",
                 "text": "[es]The Rare Genomes Project is a research study focused on patients and families with <span class=\"Accent\">rare and genetically undiagnosed conditions</span>. We use genomic sequencing to search for the cause of rare disease in these families and hope to accelerate the rate of rare disease diagnosis in the process. For more information, review our <a href=\"/eligibility-criteria\" class=\"Link\">eligibility criteria</a> and read through the steps below.",
-                "image": "[es]/assets/images/step-1.jpg "
+                "image": "/assets/images/step-1.jpg "
             },
             {
                 "title": "[es]Tell us about your family",
                 "text": "[es]During the application process, we will ask about the rare, suspected genetic disease in your family, limited demographic information, family history information, and the results of previous genetic and other tests. After you complete your application, our study team will review the information you submit to determine if you are a good fit for the study. If so, we will set up a consent session with your family to explain the study and make sure that all of your questions are answered before sending you a consent document to sign.",
-                "image": "[es]/assets/images/step-2.jpg "
+                "image": "/assets/images/step-2.jpg "
             },
             {
                 "title": "[es]Share your medical history",
                 "text": "[es]After signing consent documents, we will ask for copies of medical records, including genetic test results, from affected family members. You can send this information by mail or secure fax using the information provided after your consent session.",
-                "image": "[es]/assets/images/step-3.jpg "
+                "image": "/assets/images/step-3.jpg "
             },
             {
                 "title": "[es]Send us your sample",
                 "text": "[es]Once enrolled, we will mail pre-paid sample collection kits directly to you and your family. You can take these kits to your local Quest Diagnostics facility, or to a local doctor’s office or hospital. We cover all fees associated with sample collection.",
-                "image": "[es]/assets/images/step-4.jpg "
+                "image": "/assets/images/step-4.jpg "
             },
             {
                 "title": "[es]Have your DNA sequenced",
                 "text": "[es]When your sample arrives at our lab, we will extract DNA from the sample and perform genomic sequencing. To learn more about genomic sequencing, you can visit the U.S. National Library of Medicine's <a href=\"https://ghr.nlm.nih.gov/primer/testing/sequencing\" target=\"_blank\" class=\"Link\">Help Me Understand Genetics</a> page.",
-                "image": "[es]/assets/images/step-5.jpg "
+                "image": "/assets/images/step-5.jpg "
             },
             {
                 "title": "[es]Have your genomic data analyzed",
                 "text": "[es]To search for the genetic cause of your condition, we will compare your genome to hundreds of thousands of other individuals without your condition as well as your family members. This allows us to identify which DNA variants in your genome are potentially related to your condition.",
-                "image": "[es]/assets/images/step-6.jpg "
+                "image": "/assets/images/step-6.jpg "
             },
             {
                 "title": "[es]Share your data",
                 "text": "[es]Sharing your symptoms and genomic data with other researchers and clinicians makes finding others with similar symptoms and changes in the same genes more likely. You can learn more about the ways we share data and our privacy policy <a href=\"/privacy-and-your-data\" class=\"Link\"> here</a>.",
-                "image": "[es]/assets/images/step-7.jpg "
+                "image": "/assets/images/step-7.jpg "
             },
             {
                 "title": "[es]Receive clinically significant results",
                 "text": "[es]If we find results that we believe may explain the cause of the rare condition present in your family, we will contact you and ask if you would like to have the findings confirmed in a clinical laboratory. If you do, we will work with you and your doctor to return the results to you.",
-                "image": "[es]/assets/images/step-8.jpg "
+                "image": "/assets/images/step-8.jpg "
             }
         ],
         "Ending": {
