--- a/ddp-workspace/projects/ddp-rgp/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-rgp/src/assets/i18n/es.json
@@ -1027,6 +1027,11 @@
                 "Text": "[es]To protect your privacy, the system is going to log you out because you have been away for a while. Click “Continue” to stay logged in. Click “Sign Out” if you are done for now.",
                 "SignOut": "[es]Sign Out",
                 "Continue": "[es]Continue"
+            },
+            "LanguagePreferences": {
+                "Text": "Changing the language preference will also change the language used for e-mail communications.",
+                "CheckboxText": "Don't show this again",
+                "ButtonText": "OK"
             }
         }
     },
