at | show popup message on successful sign in

--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/de.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/de.json
@@ -384,6 +384,7 @@
     "SignAndConsent": "Unterzeichnen und Einverständnis",
     "StartOrResume": "Starten/Fortsetzen",
     "SubmitButton": "Einreichen",
+    "SuccessSignIn": "Anmeldung erfolgreich!",
     "SignInOut": {
       "SignOut": "Abmelden"
     },
