--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/en.json
@@ -511,6 +511,7 @@
     "SignAndConsent": "Sign & Consent",
     "StartOrResume": "Start/Resume",
     "SubmitButton": "Submit",
+    "SuccessSignIn": "Signed in successfully.",
     "SignInOut": {
       "SignOut": "Sign Out"
     },
