--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/es.json
@@ -384,6 +384,7 @@
     "SignAndConsent": "Firma y consentimiento",
     "StartOrResume": "Iniciar/Reanudar",
     "SubmitButton": "Enviar",
+    "SuccessSignIn": "Ha iniciado sesión correctamente.",
     "SignInOut": {
       "SignOut": "Cerrar sesión"
     },
