--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/fr.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/fr.json
@@ -384,6 +384,7 @@
     "SignAndConsent": "Signature et consentement",
     "StartOrResume": "Commencer/reprendre",
     "SubmitButton": "Envoyer",
+    "SuccessSignIn": "Vous êtes maintenant connecté(e).",
     "SignInOut": {
       "SignOut": "Déconnexion"
     },
