--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/hi.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/hi.json
@@ -394,6 +394,7 @@
     "SignAndConsent": "हस्ताक्षर करें और सहमति दें",
     "StartOrResume": "आरंभ करें/पुनः शुरू करें",
     "SubmitButton": "सबमिट करें",
+    "SuccessSignIn": "सफलतापूर्वक साइन इन किया गया।",
     "SignInOut": {
       "SignOut": "साइन आउट करें"
     },
