--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/it.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/it.json
@@ -384,6 +384,7 @@
     "SignAndConsent": "Firma e consenso",
     "StartOrResume": "Inizia/Riprendi",
     "SubmitButton": "Invia",
+    "SuccessSignIn": "Accesso effettuato con successo.",
     "SignInOut": {
       "SignOut": "Disconnetti"
     },
