--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ja.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ja.json
@@ -384,6 +384,7 @@
     "SignAndConsent": "署名および同意",
     "StartOrResume": "開始/再開",
     "SubmitButton": "提出する",
+    "SuccessSignIn": "サインインしました。",
     "SignInOut": {
       "SignOut": "サインアウト"
     },
