--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pl.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pl.json
@@ -384,6 +384,7 @@
     "SignAndConsent": "Podpis i udzielenie zgody",
     "StartOrResume": "Rozpocznij/wznów",
     "SubmitButton": "Prześlij",
+    "SuccessSignIn": "Logowanie przebiegło pomyślnie.",
     "SignInOut": {
       "SignOut": "Wyloguj"
     },
