--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pt.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pt.json
@@ -384,6 +384,7 @@
     "SignAndConsent": "Assino e consinto",
     "StartOrResume": "Iniciar/retomar",
     "SubmitButton": "Enviar",
+    "SuccessSignIn": "Login bem-sucedido.",
     "SignInOut": {
       "SignOut": "Sair"
     },
