--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
@@ -384,6 +384,7 @@
     "SignAndConsent": "Регистрация и согласие",
     "StartOrResume": "Начать/возобновить",
     "SubmitButton": "Отправить",
+    "SuccessSignIn": "Вход выполнен успешно.",
     "SignInOut": {
       "SignOut": "Выйти"
     },
