--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/tr.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/tr.json
@@ -384,6 +384,7 @@
     "SignAndConsent": "İmza ve Olur",
     "StartOrResume": "Başla/Devam Et",
     "SubmitButton": "Gönder",
+    "SuccessSignIn": "Oturum başarıyla açıldı.",
     "SignInOut": {
       "SignOut": "Oturumu Kapat"
     },
