--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/zh.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/zh.json
@@ -389,6 +389,7 @@
     "SignAndConsent": "签名和同意",
     "StartOrResume": "开始/恢复",
     "SubmitButton": "提交",
+    "SuccessSignIn": "登录成功。",
     "SignInOut": {
       "SignOut": "登出"
     },
