Fix IrbGuard and IrbPasswordService issue (#396)
* Fix issue

* Update translations

--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ar.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ar.json
@@ -384,6 +384,7 @@
       "Text": "يُرجى إدخال كلمة مرورك  *",
       "InputPlaceholder": "كلمة المرور",
       "PasswordWrongError": "كلمة المرور غير صحيحة. يُرجى المحاولة مرة أخرى.",
+      "OtherError": "[AR] We're sorry, but an error has occurred. Please try again.",
       "PasswordRequiredError": "كلمة المرور مطلوبة"
     },
     "ErrorPage": {
