--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/es.json
@@ -384,6 +384,7 @@
       "Text": "Ingrese su contraseña.*",
       "InputPlaceholder": "Contraseña",
       "PasswordWrongError": "Contraseña incorrecta. Vuelva a intentarlo.",
+      "OtherError": "[ES] We're sorry, but an error has occurred. Please try again.",
       "PasswordRequiredError": "La contraseña es obligatoria."
     },
     "ErrorPage": {
