rgp | add covid banner

--- a/ddp-workspace/projects/ddp-rgp/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rgp/src/assets/i18n/en.json
@@ -3,6 +3,10 @@
         "LogoAlt": "Rare Genome Project logo",
         "ApplyButton": "Apply"
     },
+    "Banner": {
+        "Text": "For updates on how COVID-19 is impacting our study, please click",
+        "LinkText": "here."
+    },
     "Header": {
         "Families": {
             "Text": "For Families ",
