DDP-5092: RGP Enrollment Survey: Updated buttons and main validation error

--- a/ddp-workspace/projects/ddp-rgp/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rgp/src/assets/i18n/en.json
@@ -1022,12 +1022,12 @@
         "CloseButton": "Close",
         "AddButton": "ADD",
         "CancelButton": "CANCEL",
-        "NextButton": "Next",
-        "PreviousButton": "Back",
+        "NextButton": "<span class=\"fa fa-angle-right Icon--arrow material-icons mat-icon\"></span>",
+        "PreviousButton": "<span class=\"fa fa-angle-left Icon--arrow material-icons mat-icon\"></span>",
         "SavingButton": "Saving",
         "EditButton": "View/Edit",
         "ReviewButton": "View",
-        "ValidateError": "Submission cannot proceed. Please review messages in form for details.",
+        "ValidateError": "Please answer all the required questions above to continue",
         "CommunicationError": "There was a problem saving your data. Please check the form and your answers before submitting",
         "SaveError": "We're sorry but an error occurred",
         "ExportStudy": {
