--- a/ddp-workspace/projects/ddp-rgp/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-rgp/src/assets/i18n/es.json
@@ -1044,12 +1044,12 @@
         "CloseButton": "[es]Close",
         "AddButton": "[es]ADD",
         "CancelButton": "[es]CANCEL",
-        "NextButton": "[es]Next",
-        "PreviousButton": "[es]Back",
+        "NextButton": "<span class=\"fa fa-angle-right Icon--arrow material-icons mat-icon\"></span>",
+        "PreviousButton": "<span class=\"fa fa-angle-left Icon--arrow material-icons mat-icon\"></span>",
         "SavingButton": "[es]Saving",
         "EditButton": "[es]View/Edit",
         "ReviewButton": "[es]View",
-        "ValidateError": "[es]Submission cannot proceed. Please review messages in form for details.",
+        "ValidateError": "[es]Please answer all the required questions above to continue",
         "CommunicationError": "[es]There was a problem saving your data. Please check the form and your answers before submitting",
         "SaveError": "[es]We're sorry but an error occurred",
         "ExportStudy": {
